Enhance timeline section in index.html for better readability and structure. Update styles.css to include new timeline styles for improved layout and visual consistency.

--- a/index.html
+++ b/index.html
@@ -172,22 +172,40 @@
                             Work Experience
                         </h2>
                         <div class="timeline">
-                            <div class="timeline-item mb-3">
+                            <div class="timeline-item">
                                 <h3 class="h5">Food Service Worker - Aramark</h3>
-                                <p class="text-muted mb-2">May 2023 – Present</p>
+                                <p class="text-muted">May 2023 – Present</p>
                                 <ul class="list-unstyled">
-                                    <li><i class="bi bi-check2 me-2"></i>Prepared and assembled deli items, including sandwiches, salads, and hot dishes</li>
-                                    <li><i class="bi bi-check2 me-2"></i>Monitored and managed inventory to ensure optimal stock levels</li>
-                                    <li><i class="bi bi-check2 me-2"></i>Managed demanding workloads during peak periods</li>
+                                    <li>
+                                        <i class="bi bi-check2"></i>
+                                        <span>Prepared and assembled deli items, including sandwiches, salads, and hot dishes</span>
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check2"></i>
+                                        <span>Monitored and managed inventory to ensure optimal stock levels</span>
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check2"></i>
+                                        <span>Managed demanding workloads during peak periods</span>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="timeline-item">
                                 <h3 class="h5">Kitchen Porter - Old Ground Hotel</h3>
-                                <p class="text-muted mb-2">Jun 2021 – Sep 2021</p>
+                                <p class="text-muted">Jun 2021 – Sep 2021</p>
                                 <ul class="list-unstyled">
-                                    <li><i class="bi bi-check2 me-2"></i>Prepared vegetables and sandwiches for customers</li>
-                                    <li><i class="bi bi-check2 me-2"></i>Maintained high hygiene standards</li>
-                                    <li><i class="bi bi-check2 me-2"></i>Collaborated with kitchen staff for timely service</li>
+                                    <li>
+                                        <i class="bi bi-check2"></i>
+                                        <span>Prepared vegetables and sandwiches for customers</span>
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check2"></i>
+                                        <span>Maintained high hygiene standards</span>
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check2"></i>
+                                        <span>Collaborated with kitchen staff for timely service</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
