--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal portfolio of Adam Nix">
     <title>Projects - Adam Nix</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -54,7 +55,7 @@
                 <a href="index.html" class="btn btn-primary">
                     <i class="bi bi-person me-2"></i>About Me
                 </a>
-                <a href="https://github.com/realadamnix?tab=repositories" target="_blank" class="btn btn-outline-primary">
+                <a href="https://github.com/realadamnix?tab=repositories" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">
                     <i class="bi bi-github me-2"></i>View All Projects
                 </a>
             </div>
@@ -74,7 +75,7 @@
                                 <h3 class="h5 mb-0">C++ Programming</h3>
                             </div>
                             <p>Learning C++ programming fundamentals and advanced concepts</p>
-                            <a href="https://github.com/realadamnix/learn-cplusplus" target="_blank" class="btn btn-sm btn-primary">
+                            <a href="https://github.com/realadamnix/learn-cplusplus" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-primary">
                                 <i class="bi bi-github me-2"></i>View Project
                             </a>
                         </div>
@@ -85,7 +86,7 @@
                                 <h3 class="h5 mb-0">Computer Organization</h3>
                             </div>
                             <p>Computer architecture and organization concepts</p>
-                            <a href="https://github.com/realadamnix/learn-computer-organization" target="_blank" class="btn btn-sm btn-primary">
+                            <a href="https://github.com/realadamnix/learn-computer-organization" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-primary">
                                 <i class="bi bi-github me-2"></i>View Project
                             </a>
                         </div>
@@ -106,7 +107,7 @@
                                 <h3 class="h5 mb-0">Circuit Minimization</h3>
                             </div>
                             <p>Digital circuit optimization and minimization techniques</p>
-                            <a href="https://github.com/realadamnix/learnCircuitMinimisation" target="_blank" class="btn btn-sm btn-primary">
+                            <a href="https://github.com/realadamnix/learnCircuitMinimisation" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-primary">
                                 <i class="bi bi-github me-2"></i>View Project
                             </a>
                         </div>
@@ -117,7 +118,7 @@
                                 <h3 class="h5 mb-0">Sequential Circuits</h3>
                             </div>
                             <p>Design and analysis of sequential digital circuits</p>
-                            <a href="https://github.com/realadamnix/learnSequentialCircuits" target="_blank" class="btn btn-sm btn-primary">
+                            <a href="https://github.com/realadamnix/learnSequentialCircuits" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-primary">
                                 <i class="bi bi-github me-2"></i>View Project
                             </a>
                         </div>
@@ -158,17 +159,21 @@
         </div>
     </main>
 
+    <button id="back-to-top" class="back-to-top btn btn-primary" aria-label="Back to top">
+        <i class="bi bi-arrow-up"></i>
+    </button>
+
     <footer class="py-4">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
+                    <p class="mb-0">&copy; <span id="year"></span> Adam Nix. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank">
+                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank">
+                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-linkedin"></i>
                     </a>
                 </div>
