--- a/thankyou.html
+++ b/thankyou.html
@@ -12,6 +12,7 @@
         </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Personal portfolio of Adam Nix">
         <title>Thank You - Adam Nix</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -59,17 +60,21 @@
         </div>
     </main>
 
+    <button id="back-to-top" class="back-to-top btn btn-primary" aria-label="Back to top">
+        <i class="bi bi-arrow-up"></i>
+    </button>
+
     <footer class="py-4">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
+                    <p class="mb-0">&copy; <span id="year"></span> Adam Nix. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank">
+                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank">
+                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-linkedin"></i>
                     </a>
                 </div>
