--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Personal portfolio of Adam Nix">
         <title>Adam Nix</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -48,12 +49,12 @@
     <main class="container py-5">
         <section class="hero-section text-center mb-4">
             <h1 class="display-4 fw-bold mb-3">Adam Nix</h1>
-            <p class="lead mb-3">Computer Networks and Systems Management Student</p>
+            <p class="lead mb-3" id="hero-typed">Computer Networks and Systems Management Student</p>
             <div class="d-flex justify-content-center gap-3 mb-4">
                 <a href="contact.html" class="btn btn-primary">
                     <i class="bi bi-envelope me-2"></i>Get in Touch
                 </a>
-                <a href="https://github.com/realadamnix?tab=repositories" target="_blank" class="btn btn-outline-primary">
+                <a href="https://github.com/realadamnix?tab=repositories" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">
                     <i class="bi bi-github me-2"></i>View My Work
                 </a>
             </div>
@@ -61,7 +62,7 @@
 
         <div class="row g-4 mb-4">
             <div class="col-lg-8">
-                <div class="card h-100">
+                <div class="card h-100 reveal">
                     <div class="card-body">
                         <h2 class="card-title mb-3">
                             <i class="bi bi-person-badge me-2"></i>
@@ -73,7 +74,7 @@
             </div>
             
             <div class="col-lg-4">
-                <div class="card h-100">
+                <div class="card h-100 reveal">
                     <div class="card-body">
                         <h2 class="card-title mb-3">
                             <i class="bi bi-mortarboard me-2"></i>
@@ -105,13 +106,13 @@
                             Certifications
                         </h2>
                         <div class="d-flex flex-wrap gap-2">
-                            <a href="https://www.credly.com/badges/38a00d76-86ac-45c9-a2d4-27a5a87f8901/public_url" target="_blank" class="text-decoration-none">
+                            <a href="https://www.credly.com/badges/38a00d76-86ac-45c9-a2d4-27a5a87f8901/public_url" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
                                 <span class="badge bg-success">CCNA: Enterprise Networking, Security, and Automation</span>
                             </a>
-                            <a href="https://www.credly.com/badges/3cf65f63-0029-4048-a712-959a88ba4cd6/public_url" target="_blank" class="text-decoration-none">
+                            <a href="https://www.credly.com/badges/3cf65f63-0029-4048-a712-959a88ba4cd6/public_url" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
                                 <span class="badge bg-success">CCNA: Switching, Routing, and Wireless Essentials</span>
                             </a>
-                            <a href="https://www.credly.com/badges/da6441b4-22f7-49ee-9016-0104985acf0e" target="_blank" class="text-decoration-none">
+                            <a href="https://www.credly.com/badges/da6441b4-22f7-49ee-9016-0104985acf0e" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
                                 <span class="badge bg-success">Microsoft Office Specialist: Associate</span>
                             </a>
                             <span class="badge bg-success">Driver's licence (category B)</span>
@@ -123,7 +124,7 @@
 
         <div class="row g-4 mb-4">
             <div class="col-lg-4">
-                <div class="card h-100">
+                <div class="card h-100 reveal">
                     <div class="card-body">
                         <h2 class="card-title mb-3">
                             <i class="bi bi-tools me-2"></i>
@@ -165,7 +166,7 @@
             </div>
 
             <div class="col-lg-8">
-                <div class="card h-100">
+                <div class="card h-100 reveal">
                     <div class="card-body">
                         <h2 class="card-title mb-3">
                             <i class="bi bi-briefcase me-2"></i>
@@ -235,7 +236,7 @@
                             <i class="bi bi-github me-3 h4 mb-0"></i>
                             <div>
                                 <h3 class="h5 mb-1">GitHub</h3>
-                                <a href="https://github.com/realadamnix?tab=repositories" target="_blank" class="text-decoration-none">View My Work</a>
+                                <a href="https://github.com/realadamnix?tab=repositories" target="_blank" rel="noopener noreferrer" class="text-decoration-none">View My Work</a>
                             </div>
                         </div>
                     </div>
@@ -244,7 +245,7 @@
                             <i class="bi bi-linkedin me-3 h4 mb-0"></i>
                             <div>
                                 <h3 class="h5 mb-1">LinkedIn</h3>
-                                <a href="https://www.linkedin.com/in/realadamnix/" target="_blank" class="text-decoration-none">Connect with Me</a>
+                                <a href="https://www.linkedin.com/in/realadamnix/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Connect with Me</a>
                             </div>
                         </div>
                     </div>
@@ -253,17 +254,21 @@
         </div>
     </main>
 
+    <button id="back-to-top" class="back-to-top btn btn-primary" aria-label="Back to top">
+        <i class="bi bi-arrow-up"></i>
+    </button>
+
     <footer class="py-4">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
+                    <p class="mb-0">&copy; <span id="year"></span> Adam Nix. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank">
+                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank">
+                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-linkedin"></i>
                     </a>
                 </div>
