--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
                             <li class="mb-2">
                                 <strong>Bachelor of Science (Honours) in Computer Networks and Systems Management</strong><br>
                                 Technological University of the Shannon (TUS)<br>
-                                <small class="text-muted">Sep 2023 – Present</small>
+                                <small >Sep 2023 – Present</small>
                             </li>
+                            <br>
                             <li>
                                 <strong>PLC Computer and Networks</strong><br>
                                 Limerick College of Further Education<br>
-                                <small class="text-muted">Sep 2022 – Apr 2023</small>
+                                <small >Sep 2022 – Apr 2023</small>
                             </li>
                         </ul>
                     </div>
